add swagger ui for users api
