# app/Http/Requests/StoreUserRequest.php
@@ -7,15 +7,17 @@ use Illuminate\Foundation\Http\FormRequest;
 /**
  * @OA\Schema(
  *     schema="StoreUserRequest",
- *     required={"name", "email", "password", "passwordConfirmation", "phoneNumber" , "roleId", "status"},
- *     @OA\Property(property="name", type="string", example="Thành Đạt"),
- *     @OA\Property(property="email", type="string", format="email", example="thanhdat@example.com"),
- *     @OA\Property(property="password", type="string", format="password", example="password123"),
- *     @OA\Property(property="passwordConfirmation", type="string", format="password", example="password123"),  
- *     @OA\Property(property="phoneNumber", type="string", nullable=true, example="0399839848"),
- *     @OA\Property(property="roleId", type="integer", example=1),
- *     @OA\Property(property="status", type="boolean", example=true),
- *     @OA\Property(property="avatar", type="file")
+ *     title="Store User Request",
+ *     required={"name", "email", "password", "passwordConfirmation", "phoneNumber", "roleId", "status"},
+ *     description="Yêu cầu tạo mới người dùng",
+ *     @OA\Property(property="name", type="string", example="Thành Đạt", description="Tên đầy đủ của người dùng."),
+ *     @OA\Property(property="email", type="string", format="email", example="thanhdat@example.com", description="Địa chỉ email của người dùng."),
+ *     @OA\Property(property="phoneNumber", type="string", example="0399839848", description="Số điện thoại của người dùng."),
+ *     @OA\Property(property="avatar", type="file", description="Ảnh đại diện của người dùng (file ảnh)."),
+ *     @OA\Property(property="roleId", type="integer", example=1, description="ID vai trò của người dùng."),
+ *     @OA\Property(property="status", type="boolean", example=true, description="Trạng thái tài khoản (true: hoạt động, false: bị khóa)."),
+ *     @OA\Property(property="password", type="string", format="password", example="password123", description="Mật khẩu của người dùng, tối thiểu 8 ký tự."),
+ *     @OA\Property(property="passwordConfirmation", type="string", format="password", example="password123", description="Xác nhận mật khẩu của người dùng.")
  * )
  */
 
@@ -27,7 +29,7 @@ class StoreUserRequest extends FormRequest
             'name' => 'required|string|max:255',
             'email' => 'required|email|unique:users,email',
             'password' => 'required|string|min:8|confirmed',
-            'phoneNumber' => 'nullable|string|max:15',
+            'phoneNumber' => 'required|string|max:15',
             'roleId' => 'required|exists:roles,id',
             'status' => 'required',
             'avatar' => 'nullable|image|mimes:jpg,jpeg,png,gif,svg|max:2048',
@@ -42,7 +44,6 @@ class StoreUserRequest extends FormRequest
             ]);
         }
     }
-
 }
 
 
